@@ -23,6 +23,11 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-12-20  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+	* ImageMagick displays the search path in the event it
+	  cannot find a particular configuration file (thanks to
+	  billr@corbis.com)
+
 2001-12-14  Leonard Rosenthol  &lt;leonardr@lazerware.com&gt;
 	* Fixed some bugs in the new composite operators.
 
